Apply Manuel's suggestions part 1
Co-authored-by: Manuel Hässig <manuel@haessig.org>